--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,9 @@ tensorboard>=2.4.1
 # Plotting ------------------------------------
 pandas>=1.1.4
 seaborn>=0.11.0
-protobuf<=3.20
+protobuf<=3.20.1,>=3.12.2
 
 # Export --------------------------------------
 onnx>=1.9.0  # ONNX export
 onnxruntime
-onnx-simplifier>=0.3.6  # ONNX simplifier
+onnx-simplifier>=0.4.1  # ONNX simplifier
