--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,5 @@ protobuf<=3.20.1,>=3.12.2
 
 # Export --------------------------------------
 onnx>=1.9.0  # ONNX export
-onnxruntime
+onnxruntime-gpu
 onnx-simplifier>=0.4.1  # ONNX simplifier
